--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
-group 'com.roisoftstudio.ms'
+group 'com.roisoftstudio.godutch'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'com.bmuschko.docker-remote-api'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+
 }
+
 buildscript {
     repositories {
         jcenter()
@@ -17,20 +25,36 @@ buildscript {
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
-
-import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.container.*
+import com.bmuschko.gradle.docker.tasks.image.*
 
 docker {
-    url = 'tcp://192.168.99.100:2376'
- //   dockerHost  = System.env.DOCKER_HOST
+    url = host
 }
 
-task buildImage(type: DockerBuildImage) {
-    println 'buildImage'
+task buildMyAppImage(type: DockerBuildImage) {
     inputDir = project.file('src/main/resources/')
     tag =  'godutch'
 }
+
+task createMyAppContainer(type: DockerCreateContainer) {
+    dependsOn buildMyAppImage
+    targetImageId { buildMyAppImage.getImageId() }
+    portBindings = ['8080:8080']
+}
+
+task startMyAppContainer(type: DockerStartContainer) {
+    dependsOn createMyAppContainer
+    targetContainerId { createMyAppContainer.getContainerId() }
+}
+
+task stopMyAppContainer(type: DockerStopContainer) {
+    targetContainerId { createMyAppContainer.getContainerId() }
+}
+
+task functionalTestMyApp(type: Test) {
+    dependsOn startMyAppContainer
+    //finalizedBy stopMyAppContainer
+}
+
+
