--- a/src/main/resources/Dockerfile
+++ b/src/main/resources/Dockerfile
@@ -1,2 +1,5 @@
-FROM ubuntu
-CMD echo ALGO
+FROM tomcat
+CMD pwd
+COPY godutch-1.0-SNAPSHOT.war /usr/local/tomcat/webapps/
+
+CMD ["catalina.sh", "run"]
