--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ import com.bmuschko.gradle.docker.tasks.container.*
 import com.bmuschko.gradle.docker.tasks.image.*
 
 docker {
-    url = host
+    url = "127.0.0.1"
 }
 
 task buildMyAppImage(type: DockerBuildImage) {
