--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 
-script: ./gradlew -Phost=127.0.0.1 build --stacktrace --info
+script: ./gradlew assemble -Phost=127.0.0.1 --stacktrace --info
