--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 
-script: ./gradlew build -Phost=127.0.0.1 --stacktrace --info
+install: ./gradlew build -Phost=127.0.0.1 --stacktrace --info
