--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
 
+before_install:
 install: ./gradlew build -Phost=127.0.0.1 --stacktrace --info
+before_script: 
+script: 
+after_success: 
+after_failure: 
+after_script: 
