--- a/build.gradle
+++ b/build.gradle
@@ -29,37 +29,39 @@ buildscript {
         classpath 'com.bmuschko:gradle-docker-plugin:2.6.5'
     }
 }
-
-import com.bmuschko.gradle.docker.tasks.container.*
-import com.bmuschko.gradle.docker.tasks.image.*
-
-docker {
-    url = host
-}
-
-task buildMyAppImage(type: DockerBuildImage) {
-    inputDir = project.file('src/main/resources/')
-    tag =  'godutch'
-}
-
-task createMyAppContainer(type: DockerCreateContainer) {
-    dependsOn buildMyAppImage
-    targetImageId { buildMyAppImage.getImageId() }
-    portBindings = ['8080:8080']
-}
-
-task startMyAppContainer(type: DockerStartContainer) {
-    dependsOn createMyAppContainer
-    targetContainerId { createMyAppContainer.getContainerId() }
-}
-
-task stopMyAppContainer(type: DockerStopContainer) {
-    targetContainerId { createMyAppContainer.getContainerId() }
-}
-
-task functionalTestMyApp(type: Test) {
-    dependsOn startMyAppContainer
-    //finalizedBy stopMyAppContainer
+task runDocker(type:Exec) {
+    println "ola"
+    commandLine "docker build ."
 }
 
 
+//docker {
+//    url = "127.0.0.1"
+//}
+//
+//task buildMyAppImage(type: DockerBuildImage) {
+//    inputDir = project.file('src/main/resources/')
+//    tag =  'godutch'
+//}
+//
+//task createMyAppContainer(type: DockerCreateContainer) {
+//    dependsOn buildMyAppImage
+//    targetImageId { buildMyAppImage.getImageId() }
+//    portBindings = ['8080:8080']
+//}
+//
+//task startMyAppContainer(type: DockerStartContainer) {
+//    dependsOn createMyAppContainer
+//    targetContainerId { createMyAppContainer.getContainerId() }
+//}
+//
+//task stopMyAppContainer(type: DockerStopContainer) {
+//    targetContainerId { createMyAppContainer.getContainerId() }
+//}
+//
+//task functionalTestMyApp(type: Test) {
+//    dependsOn startMyAppContainer
+//    //finalizedBy stopMyAppContainer
+//}
+//
+//
