--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,6 @@ sudo: required
 
 language: java
 
-services:
-  - docker
+install: ./gradlew check -Phost="http://127.0.0.1:4243" --stacktrace --info
 
-before_install:
-install: ./gradlew build -Phost=127.0.0.1 --stacktrace --info
-
-before_script:
-script: docker build -t rss/godutch .
-after_success: docker run rss/godutch
-after_failure: 
-after_script: 
+script: ./gradlew build -Phost="http://127.0.0.1:4243" --stacktrace --info
