docker and travis conf

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ import com.bmuschko.gradle.docker.tasks.container.*
 import com.bmuschko.gradle.docker.tasks.image.*
 
 docker {
-    url=host
+    url="tcp://192.168.99.100:2376"
 }
 
 task buildMyAppImage(type: DockerBuildImage) {
