docker working on windows

--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,22 @@ buildscript {
     }
 }
 
-import com.bmuschko.gradle.docker.tasks.container.*
-import com.bmuschko.gradle.docker.tasks.image.*
+import com.bmuschko.gradle.docker.tasks.container.DockerCreateContainer
+import com.bmuschko.gradle.docker.tasks.container.DockerStartContainer
+import com.bmuschko.gradle.docker.tasks.container.DockerStopContainer
+import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+
+apply plugin: 'com.bmuschko.docker-remote-api'
 
 docker {
-    url="tcp://192.168.99.100:2376"
+    url = System.getenv().DOCKER_HOST.replace("tcp", "https")
+    certPath = new File(System.getenv().DOCKER_CERT_PATH)
+}
+
+task buildImage(type: DockerBuildImage) {
+    dependsOn assemble
+    inputDir = project.rootDir
+    tag = "godutch"
 }
 
 task buildMyAppImage(type: DockerBuildImage) {
