Set admin/admin tomcat gui user. Add war file to the container

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.roisoftstudio.godutch'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 apply plugin: 'java'
 apply plugin: 'com.bmuschko.docker-remote-api'
