--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,19 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile 'com.jayway.restassured:rest-assured:2.8.0'
-
     compile 'com.sun.jersey:jersey-server:1.13'
     compile 'com.sun.jersey:jersey-core:1.13'
     compile 'com.sun.jersey:jersey-servlet:1.13'
     compile 'org.mongodb:mongo-java-driver:3.2.2'
-
     compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+    compile 'com.google.inject:guice-parent:4.0'
+    compile 'com.google.inject.extensions:guice-servlet:4.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.5'
+
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.mockito:mockito-all:2.0.2-beta'
+    testCompile 'com.jayway.restassured:rest-assured:2.8.0'
+    testCompile 'junit:junit:4.12'
 }
 
 buildscript {
@@ -91,7 +95,6 @@ task createAppContainer(type: DockerCreateContainer) {
 task startAppContainer(type: DockerStartContainer) {
     dependsOn createAppContainer
     targetContainerId { createAppContainer.getContainerId() }
-    println "Application running on: " + containerUrl
 }
 
 task stopAppContainer(type: DockerStopContainer) {
@@ -104,4 +107,11 @@ task functionalTest(type: Test) {
     include '**/integration/**'
     finalizedBy stopDBContainer
     finalizedBy stopAppContainer
+}
+
+task startGoDutch() {
+    dependsOn startAppContainer
+    dependsOn startDBContainer
+    println "Application running on: " + containerUrl \
+
 }
