--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,12 @@ dependencies {
     compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
     compile 'com.google.inject:guice-parent:4.0'
     compile 'com.google.inject.extensions:guice-servlet:4.0'
+//    compile 'com.squarespace.jersey2-guice:jersey2-guice:0.10'
+//    compile 'org.mongodb:mongo-java-driver:3.2.2'
     compile 'org.apache.logging.log4j:log4j-core:2.5'
+//    compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
+//    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.2'
+//    compile 'javax.servlet:javax.servlet-api:3.1.0'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
