--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 //    compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
 //    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.2'
 //    compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'io.jsonwebtoken:jjwt:0.6.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.5'
+
+
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
