--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 //    compile 'com.squarespace.jersey2-guice:jersey2-guice:0.10'
 
     compile 'io.jsonwebtoken:jjwt:0.6.0'
+    compile 'org.slf4j:slf4j-api:1.7.19'
     compile 'org.apache.logging.log4j:log4j-core:2.5'
 
 
