--- a/build.gradle
+++ b/build.gradle
@@ -12,28 +12,29 @@ repositories {
 }
 
 dependencies {
-    compile 'com.sun.jersey:jersey-server:1.13'
-    compile 'com.sun.jersey:jersey-core:1.13'
-    compile 'com.sun.jersey:jersey-servlet:1.13'
-    compile 'com.sun.jersey:jersey-json:1.19'
-
-//    compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
-//    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.2'
-//    compile 'javax.servlet:javax.servlet-api:3.1.0'
-
-    compile 'org.mongodb:mongo-java-driver:3.2.2'
-    compile 'org.apache.logging.log4j:log4j-core:2.5'
-
     compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
 
-    compile 'com.google.inject:guice-parent:4.0'
+    compile 'org.glassfish.jersey.core:jersey-client:2.11'
+    compile 'org.glassfish.jersey.core:jersey-server:2.11'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.11'
+
+    compile 'org.glassfish.hk2:guice-bridge:2.5.0-b03'
+
+
+
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
+
+    compile 'org.mongodb:mongo-java-driver:3.2.2'
+
+    compile 'com.google.inject:guice:4.0'
     compile 'com.google.inject.extensions:guice-servlet:4.0'
-//    compile 'com.squarespace.jersey2-guice:jersey2-guice:0.10'
+
+    compile 'com.squarespace.jersey2-guice:jersey2-guice:0.10'
 
     compile 'io.jsonwebtoken:jjwt:0.6.0'
+
     compile 'org.slf4j:slf4j-api:1.7.19'
     compile 'org.apache.logging.log4j:log4j-core:2.5'
-
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
