--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,18 +19,18 @@
     </servlet-mapping>
 
 
-    <!--<listener>-->
-        <!--<listener-class>com.roisoftstudio.godutch.AppStart</listener-class>-->
-    <!--</listener>-->
+    <listener>
+        <listener-class>com.roisoftstudio.godutch.AppContextListener</listener-class>
+    </listener>
 
-    <!--<filter>-->
-        <!--<filter-name>guiceFilter</filter-name>-->
-        <!--<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>-->
-    <!--</filter>-->
+    <filter>
+        <filter-name>guiceFilter</filter-name>
+        <filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+    </filter>
 
-    <!--<filter-mapping>-->
-        <!--<filter-name>guiceFilter</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
+    <filter-mapping>
+        <filter-name>guiceFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
