--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,13 @@ dependencies {
 
     compile 'com.squarespace.jersey2-guice:jersey2-guice-impl:1.0.6'
 
+    compile 'com.google.code.gson:gson:2.6.2'
     compile 'org.json:json:20160212'
     compile 'io.jsonwebtoken:jjwt:0.6.0'
 
     compile 'org.slf4j:slf4j-api:1.7.19'
+    compile 'org.slf4j:slf4j-simple:1.7.21'
+
     compile 'org.apache.logging.log4j:log4j-core:2.5'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
