--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
     compile 'org.glassfish.jersey.core:jersey-client:2.22.2'
     compile 'org.glassfish.jersey.core:jersey-server:2.22.2'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.22.2'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.2'
 
     compile 'org.mongodb:mongo-java-driver:3.2.2'
