--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,7 @@ dependencies {
     compile 'org.json:json:20160212'
     compile 'io.jsonwebtoken:jjwt:0.6.0'
 
-    compile 'org.slf4j:slf4j-api:1.7.19'
-    compile 'org.slf4j:slf4j-simple:1.7.21'
-
-    compile 'org.apache.logging.log4j:log4j-core:2.5'
+    compile 'org.slf4j:slf4j-log4j12:1.7.19'
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.assertj:assertj-core:3.4.0'
