--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,6 +3,6 @@ msName=GoDutch MicroService
 msMajorVersion=0
 msMinorVersion=1
 
-
-host=192.168.99.100
-port=18080
+webProtocol=http
+ip=192.168.99.100
+webPort=18080
