--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,15 +9,23 @@
     <servlet>
         <servlet-name>Jersey</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>com.roisoftstudio.godutch</param-value>
         </init-param>
+
+        <init-param>
+            <param-name>jersey.config.server.provider.classnames</param-name>
+            <param-value>com.roisoftstudio.godutch.ResponseFilter</param-value>
+        </init-param>`
+
         <init-param>
             <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
             <param-value>true</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
+
     </servlet>
 
     <servlet-mapping>
